# authoring-ros

./: CMakeLists.txt  README.md  package.xml
config/: transforms.yaml
launch/: all.launch  detect.launch  driver.launch  get_camera.launch  get_jungle.launch  joint_state_pub.launch  joint_state_pub_nojsp.launch  kinect.launch  rviz_viewer.launch  space_mouse.launch  utils.launch  virtual_camera.launch
meshes/: Kinect_back.stl  Kinect_front.stl  box_plan.stl  clip.stl  force_torque_sensor.dae  force_torque_sensor.stl  panel.stl  screw.stl  thread.stl
meshes/visual/: kinect-model.stl
model/: annotations.json  model_final.pth
nodes/: camera_switcher  clipping_task  cloud_filter  detector  folding_task  mover  mover_server  parser  pc_publish  planner  poi  r_ik_wrapper  recorder  removeMeshes.py  rviz_manager  rviz_viewer.py  saver  saver_pc  simulator  socket  space_mouse  start_here.py  static_publisher  tf_printer  tracker  virtual_camera_manager
rviz/: authoring.rviz  joint_viewer.rviz  simu.rviz
saved_msgs/: depth.txt  pc.txt
src/: jacob.cpp
urdfs/: panda.urdf  panda_arm_hand.urdf
